force-app/main/default/objects/CCAvenueConfig__mdt/CCAvenueConfig__mdt.object-meta.xml
<CustomObject>
    <label>CCAvenue Config</label>
    <pluralLabel>CCAvenue Config</pluralLabel>
</CustomObject>