force-app/main/default/objects/CCAvenueConfig__mdt/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <label>Access Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>