force-app/main/default/objects/CCAvenueConfig__mdt/fields/Environment_URL__c.field-meta.xml
<CustomField>
    <fullName>Environment_URL__c</fullName>
    <label>Environment URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>