force-app/main/default/objects/CCAvenueConfig__mdt/fields/Working_Key__c.field-meta.xml
<CustomField>
    <fullName>Working_Key__c</fullName>
    <label>Working Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>